name:                codejam2008-qualifier
version:             2008.0.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-saving-the-universe
  main-is:             A-saving-the-universe.hs
  build-depends:       base
  default-language:    Haskell2010

executable B-train-timetable
  main-is:             B-train-timetable.hs
  build-depends:       base
  default-language:    Haskell2010
