name:                codejam2008-round1a
version:             2008.1.1.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-minimum-scalar-product
  main-is:             A-minimum-scalar-product.hs
  build-depends:       base
  default-language:    Haskell2010

executable B-milkshakes
  main-is:             B-milkshakes.hs
  build-depends:       base, array
  default-language:    Haskell2010

executable C-numbers
  main-is:             C-numbers.hs
  build-depends:       base
  default-language:    Haskell2010
