name:                codejam2008-round1c
version:             2008.1.3.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-text-messaging-outrage
  main-is:             A-text-messaging-outrage.hs
  build-depends:       base
  default-language:    Haskell2010

executable B-ugly-numbers
  main-is:             B-ugly-numbers.hs
  build-depends:       base, array
  default-language:    Haskell2010

executable C-increasing-speed-limits
  main-is:             C-increasing-speed-limits.hs
  build-depends:       base, array
  default-language:    Haskell2010
