name:                codejam2009-qualifier
version:             2009.0.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-alien-language
  main-is:             A-alien-language.hs
  build-depends:       base
  default-language:    Haskell2010

executable B-watersheds
  main-is:             B-watersheds.hs
  build-depends:       base, array
  default-language:    Haskell2010

executable C-welcome-to-code-jam
  main-is:             C-welcome-to-code-jam.hs
  build-depends:       base, array
  default-language:    Haskell2010
