name:                codejam2009-round1a
version:             2009.1.1.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable B-crossing-the-road
  main-is:             B-crossing-the-road.hs
  build-depends:       base, array
  default-language:    Haskell2010
