name:                codejam2009-round1b
version:             2009.1.2.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-decision-tree
  main-is:             A-decision-tree.hs
  build-depends:       base
  default-language:    Haskell2010

executable B-the-next-number
  main-is:             B-the-next-number.hs
  build-depends:       base, array
  default-language:    Haskell2010
