name:                codejam2009-round2
version:             2009.2.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-crazy-cows
  main-is:             A-crazy-cows.hs
  build-depends:       base
  default-language:    Haskell2010

executable B-a-digging-problem
  main-is:             B-a-digging-problem.hs
  build-depends:       base, array, containers
  default-language:    Haskell2010
