name:                codejam2010-qualifier
version:             2010.0.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-snapper-chain
  main-is:             A-snapper-chain.hs
  build-depends:       base
  default-language:    Haskell2010

executable B-fair-warning
  main-is:             B-fair-warning.hs
  build-depends:       base
  default-language:    Haskell2010

executable C-theme-park
  main-is:             C-theme-park.hs
  build-depends:       base, array, containers
  default-language:    Haskell2010
