name:                codejam2010-round1a
version:             2010.1.1.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-rotate
  main-is:             A-rotate.hs
  build-depends:       base, array
  default-language:    Haskell2010

executable B-make-it-smooth
  main-is:             B-make-it-smooth.hs
  build-depends:       base, array
  default-language:    Haskell2010

executable C-number-game
  main-is:             C-number-game.hs
  build-depends:       base
  default-language:    Haskell2010
