name:                codejam2010-round1b
version:             2010.1.2.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable B-picking-up-chicks
  main-is:             B-picking-up-chicks.hs
  build-depends:       base
  default-language:    Haskell2010

executable C-your-rank-is-pure
  main-is:             C-your-rank-is-pure.hs
  build-depends:       base, array
  default-language:    Haskell2010
