name:                codejam2010-round1c
version:             2010.1.3.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-rope-intranet
  main-is:             A-rope-intranet.hs
  build-depends:       base
  default-language:    Haskell2010

executable B-load-testing
  main-is:             B-load-testing.hs
  build-depends:       base
  default-language:    Haskell2010

executable C-making-chess-boards
  main-is:             C-making-chess-boards.hs
  build-depends:       base, array
  default-language:    Haskell2010
