name:                codejam2010-round3
version:             2010.3.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable B-fence
  main-is:             B-fence.hs
  build-depends:       base
  default-language:    Haskell2010
