name:                codejam2011-qualifier
version:             2011.0.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-bot-trust
  main-is:             A-bot-trust.hs
  build-depends:       base
  default-language:    Haskell2010

executable B-magicka
  main-is:             B-magicka.hs
  build-depends:       base
  default-language:    Haskell2010

executable C-candy-splitting
  main-is:             C-candy-splitting.hs
  build-depends:       base
  default-language:    Haskell2010

executable D-gorosort
  main-is:             D-gorosort.hs
  build-depends:       base
  default-language:    Haskell2010
