name:                codejam2011-round1a
version:             2011.1.1.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-freecell-statistics
  main-is:             A-freecell-statistics.hs
  build-depends:       base
  default-language:    Haskell2010

executable A-freecell-statistics2
  main-is:             A-freecell-statistics2.hs
  build-depends:       base
  default-language:    Haskell2010

executable B-the-killer-word
  main-is:             B-the-killer-word.hs
  build-depends:       base
  default-language:    Haskell2010

executable C-pseudominion
  main-is:             C-pseudominion.hs
  build-depends:       base, containers, deepseq, mtl
  default-language:    Haskell2010
