name:                codejam2011-round1c
version:             2011.1.3.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-square-tiles
  main-is:             A-square-tiles.hs
  build-depends:       base, array
  default-language:    Haskell2010

executable B-space-emergency
  main-is:             B-space-emergency.hs
  build-depends:       base
  default-language:    Haskell2010

executable C-perfect-harmony
  main-is:             C-perfect-harmony.hs
  build-depends:       base
  default-language:    Haskell2010

executable C-perfect-harmony2
  main-is:             C-perfect-harmony2.hs
  build-depends:       base
  default-language:    Haskell2010

executable C-perfect-harmony3
  main-is:             C-perfect-harmony3.hs
  build-depends:       base
  default-language:    Haskell2010
