name:                codejam2012-qualifier
version:             2012.0.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-speaking-in-tongues
  main-is:             A-speaking-in-tongues.hs
  build-depends:       base
  default-language:    Haskell2010

executable B-dancing-with-the-googlers
  main-is:             B-dancing-with-the-googlers.hs
  build-depends:       base
  default-language:    Haskell2010

executable C-recycled-numbers
  main-is:             C-recycled-numbers.hs
  build-depends:       base
  default-language:    Haskell2010
