name:                codejam2012-round1a
version:             2012.1.1.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-password-problem
  main-is:             A-password-problem.hs
  build-depends:       base
  default-language:    Haskell2010

executable B-kingdom-rush
  main-is:             B-kingdom-rush.hs
  build-depends:       base
  default-language:    Haskell2010
