name:                codejam2012-round1b
version:             2012.1.2.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-safety-in-numbers
  main-is:             A-safety-in-numbers.hs
  build-depends:       base
  default-language:    Haskell2010

executable C-equal-sums-small
  main-is:             C-equal-sums-small.hs
  build-depends:       base
  default-language:    Haskell2010

executable C-equal-sums-large
  main-is:             C-equal-sums-large.hs
  build-depends:       base, array, containers
  default-language:    Haskell2010
