name:                codejam2012-round1c
version:             2012.1.3.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-diamond-inheritance
  main-is:             A-diamond-inheritance.hs
  build-depends:       base, array, containers
  default-language:    Haskell2010

executable B-out-of-gas
  main-is:             B-out-of-gas.hs
  build-depends:       base
  default-language:    Haskell2010

executable C-box-factory-small
  main-is:             C-box-factory-small.hs
  build-depends:       base
  default-language:    Haskell2010
