name:                codejam2012-round2
version:             2012.2.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-swinging-wild
  main-is:             A-swinging-wild.hs
  build-depends:       base, containers
  default-language:    Haskell2010

executable B-aerobics
  main-is:             B-aerobics.hs
  build-depends:       base, mtl, random
  default-language:    Haskell2010
