name:                codejam2012-round3
version:             2012.3.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-perfect-game-small
  main-is:             A-perfect-game-small.hs
  build-depends:       base
  default-language:    Haskell2010

executable A-perfect-game-large
  main-is:             A-perfect-game-large.hs
  build-depends:       base
  default-language:    Haskell2010

executable B-havannah
  main-is:             B-havannah.hs
  build-depends:       base, containers
  default-language:    Haskell2010
