name:                codejam2013-round1b
version:             2013.1.2.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-osmos
  main-is:             A-osmos.hs
  build-depends:       base, array, containers, mtl
  default-language:    Haskell2010

executable B-falling-diamonds
  main-is:             B-falling-diamonds.hs
  build-depends:       base, array
  default-language:    Haskell2010

executable C-garbled-email
  main-is:             C-garbled-email.hs
  build-depends:       base, containers, mtl
  default-language:    Haskell2010
